<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>
    <version>0.0.1-SNAPSHOT</version>

    <groupId>com.livegameengine</groupId>
    <artifactId>livegame</artifactId>

    <properties>
        <appengine.app.version>1</appengine.app.version>
        <appengine.target.version>1.8.9</appengine.target.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Compile/runtime dependencies -->
        
      <dependency>
          <groupId>com.google.code.findbugs</groupId>
          <artifactId>jsr305</artifactId>
          <version>1.3.9</version>
      </dependency>
      <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
          </dependency>    <!-- Compile/runtime dependencies -->
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-endpoints</artifactId>
      <version>${appengine.target.version}</version>
    </dependency> 
    
    <dependency>
      <groupId>javax.jdo</groupId>
      <artifactId>jdo-api</artifactId>
      <version>3.0.1</version>
    </dependency>
    
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency> 
    
    <dependency>
      <groupId>net.sf.jsr107cache</groupId>
      <artifactId>jsr107cache</artifactId>
      <version>1.1</version>
    </dependency>   
    
    
    <dependency>
      <groupId>org.datanucleus</groupId>
      <artifactId>datanucleus-core</artifactId>
      <version>3.1.4</version>
      <scope>runtime</scope>
    </dependency>  
    <dependency>
      <groupId>com.google.appengine.orm</groupId>
      <artifactId>datanucleus-appengine</artifactId>
      <version>2.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.datanucleus</groupId>
      <artifactId>datanucleus-api-jdo</artifactId>
      <version>3.1.3</version>
    </dependency>   
    
        
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-api-1.0-sdk</artifactId>
            <version>${appengine.target.version}</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
        	<groupId>org.springframework</groupId>
        	<artifactId>spring-webmvc</artifactId>
        	<version>3.2.5.RELEASE</version>
        </dependency>
        <dependency>
        	<groupId>commons-scxml</groupId>
        	<artifactId>commons-scxml</artifactId>
        	<version>0.9</version>
        </dependency>
        <dependency>
        	<groupId>org.mozilla</groupId>
        	<artifactId>rhino</artifactId>
        	<version>1.7R4</version>
        </dependency>
        <dependency>
        	<groupId>net.sf.flexjson</groupId>
        	<artifactId>flexjson</artifactId>
        	<version>2.1</version>
        </dependency>
        <dependency>
        	<groupId>commons-collections</groupId>
        	<artifactId>commons-collections</artifactId>
        	<version>3.2.2</version>
        </dependency>
        <dependency>
        	<groupId>commons-codec</groupId>
        	<artifactId>commons-codec</artifactId>
        	<version>1.8</version>
        </dependency>
        <dependency>
        	<groupId>xalan</groupId>
        	<artifactId>xalan</artifactId>
        	<version>2.7.1</version>
        </dependency>
    </dependencies>

    <build>
    	<outputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.5.1</version>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <archiveClasses>true</archiveClasses>
                    <webResources>
                        <!-- in order to interpolate version from pom into appengine-web.xml -->
                        <resource>
                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                            <filtering>true</filtering>
                            <targetPath>WEB-INF</targetPath>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.appengine</groupId>
                <artifactId>appengine-maven-plugin</artifactId>
                <version>${appengine.target.version}</version>
			    <configuration>
			        <jvmFlags>
			            <jvmFlag>-Xdebug</jvmFlag>
			            <jvmFlag>-Xrunjdwp:transport=dt_socket,address=1044,server=y,suspend=y
			            </jvmFlag>
			            <jvmFlag>-XX:+CMSClassUnloadingEnabled</jvmFlag>
			            <jvmFlag>-XX:+CMSPermGenSweepingEnabled</jvmFlag>
			            <jvmFlag>-XX:PermSize=512m</jvmFlag>
			            <jvmFlag>-XX:MaxPermSize=512m</jvmFlag>
			        </jvmFlags>
			        <disableUpdateCheck>true</disableUpdateCheck>
			    </configuration>
            </plugin>
            
             <plugin>
			    <groupId>org.datanucleus</groupId>
			    <artifactId>maven-datanucleus-plugin</artifactId>
			    <version>3.1.2</version>
			    <configuration>
			      <log4jConfiguration>${basedir}/log4j.properties</log4jConfiguration>
			      <verbose>false</verbose>
			      <fork>false</fork>
			    </configuration>
			    <executions>
			      <execution>
			        <phase>process-classes</phase>
			        <goals>
			          <goal>enhance</goal>
			        </goals>
			      </execution>
			    </executions>
			  </plugin>
			  
        </plugins>
    </build>

</project>
